--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -351,6 +351,7 @@
                 <h1><a href="/" style="color: inherit; text-decoration: none;">RTube</a></h1>
                 {% if current_user.is_authenticated %}
                 <a href="{{ url_for('playlists.index') }}" class="btn-playlists">Playlists</a>
+                <a href="{{ url_for('videos.watch_history') }}" class="btn-playlists">History</a>
                 {% if current_user.can_upload() %}
                 <div class="dropdown">
                     <span class="dropdown-toggle">Encoding</span>
